--- a/Flix_products/Product_Categorisation2.ipynb
+++ b/Flix_products/Product_Categorisation2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "{0, 1, 2, 3, 4, 5, 6, 7, 8}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5020, 9)"
+       "(5161, 9)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,15 +432,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of data tensor: (5020, 100)\n",
-      "Shape of label tensor: (5020, 9)\n"
+      "Shape of data tensor: (5161, 100)\n",
+      "Shape of label tensor: (5161, 9)\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,9 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'numpy.ndarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-75-05f27693f596>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+     ]
+    }
+   ],
    "source": [
     "#set(y_val), type(y_train)"
    ]
@@ -526,34 +538,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 3000 samples, validate on 2020 samples\n",
+      "WARNING:tensorflow:From C:\\Users\\Daniel\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Train on 4000 samples, validate on 1161 samples\n",
       "Epoch 1/10\n",
-      "3000/3000 [==============================] - 3s 860us/step - loss: 1.6137 - acc: 0.2777 - val_loss: 1.5468 - val_acc: 0.3064\n",
+      "4000/4000 [==============================] - 2s 591us/step - loss: 0.8310 - acc: 0.7668 - val_loss: 0.3951 - val_acc: 0.8880\n",
       "Epoch 2/10\n",
-      "3000/3000 [==============================] - 2s 548us/step - loss: 1.4029 - acc: 0.4350 - val_loss: 1.6136 - val_acc: 0.2802\n",
+      "4000/4000 [==============================] - 2s 506us/step - loss: 0.2059 - acc: 0.9465 - val_loss: 0.2858 - val_acc: 0.9216\n",
       "Epoch 3/10\n",
-      "3000/3000 [==============================] - 2s 547us/step - loss: 1.2013 - acc: 0.5490 - val_loss: 1.7511 - val_acc: 0.2668\n",
+      "4000/4000 [==============================] - 2s 502us/step - loss: 0.1140 - acc: 0.9680 - val_loss: 0.2573 - val_acc: 0.9251\n",
       "Epoch 4/10\n",
-      "3000/3000 [==============================] - 2s 543us/step - loss: 1.0177 - acc: 0.6113 - val_loss: 1.8968 - val_acc: 0.2490\n",
+      "4000/4000 [==============================] - 2s 494us/step - loss: 0.0930 - acc: 0.9720 - val_loss: 0.2974 - val_acc: 0.9173\n",
       "Epoch 5/10\n",
-      "3000/3000 [==============================] - 2s 545us/step - loss: 0.8997 - acc: 0.6287 - val_loss: 2.0403 - val_acc: 0.2540\n",
+      "4000/4000 [==============================] - 2s 501us/step - loss: 0.0787 - acc: 0.9790 - val_loss: 0.3325 - val_acc: 0.9070\n",
       "Epoch 6/10\n",
-      "3000/3000 [==============================] - 2s 544us/step - loss: 0.8367 - acc: 0.6420 - val_loss: 2.1888 - val_acc: 0.2599\n",
+      "4000/4000 [==============================] - 2s 504us/step - loss: 0.0756 - acc: 0.9785 - val_loss: 0.3346 - val_acc: 0.9087\n",
       "Epoch 7/10\n",
-      "3000/3000 [==============================] - 2s 558us/step - loss: 0.8007 - acc: 0.6420 - val_loss: 2.2784 - val_acc: 0.2475\n",
+      "4000/4000 [==============================] - 2s 498us/step - loss: 0.0723 - acc: 0.9783 - val_loss: 0.3209 - val_acc: 0.9276\n",
       "Epoch 8/10\n",
-      "3000/3000 [==============================] - 2s 549us/step - loss: 0.7744 - acc: 0.6407 - val_loss: 2.3088 - val_acc: 0.2450\n",
+      "4000/4000 [==============================] - 2s 487us/step - loss: 0.0677 - acc: 0.9802 - val_loss: 0.3439 - val_acc: 0.9208\n",
       "Epoch 9/10\n",
-      "3000/3000 [==============================] - 2s 547us/step - loss: 0.7530 - acc: 0.6427 - val_loss: 2.3417 - val_acc: 0.2381\n",
+      "4000/4000 [==============================] - 2s 500us/step - loss: 0.0672 - acc: 0.9780 - val_loss: 0.3267 - val_acc: 0.9294\n",
       "Epoch 10/10\n",
-      "3000/3000 [==============================] - 2s 553us/step - loss: 0.7331 - acc: 0.6443 - val_loss: 2.3976 - val_acc: 0.2431\n"
+      "4000/4000 [==============================] - 2s 501us/step - loss: 0.0637 - acc: 0.9800 - val_loss: 0.3403 - val_acc: 0.9233\n"
      ]
     }
    ],
@@ -570,22 +585,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
+       "array([[1.3543166e-07, 6.8838735e-06, 4.9698676e-15, ..., 5.9214018e-12,\n",
+       "        9.9999201e-01, 2.0079182e-13],\n",
+       "       [1.5148845e-07, 2.2095590e-07, 4.9754390e-13, ..., 1.5172257e-10,\n",
+       "        4.3803979e-08, 2.3783603e-10],\n",
+       "       [4.4380772e-06, 9.9999273e-01, 1.9692762e-15, ..., 1.6181231e-14,\n",
+       "        2.2549025e-06, 8.6437320e-14],\n",
        "       ...,\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.]], dtype=float32)"
+       "       [7.6952518e-04, 9.9918586e-01, 3.2740484e-08, ..., 2.1329145e-09,\n",
+       "        9.6084659e-06, 1.6753145e-07],\n",
+       "       [2.2593276e-06, 1.8275221e-05, 6.0289583e-14, ..., 4.0921959e-09,\n",
+       "        5.3798012e-06, 5.8095140e-11],\n",
+       "       [1.6560693e-05, 8.4585281e-06, 4.6540289e-12, ..., 2.2937732e-09,\n",
+       "        9.9997389e-01, 1.0675727e-09]], dtype=float32)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
